# cuda_tutorial_example

./: .gitignore  CMakeLists.txt  README.md  build-ncu.sh  build-nsys.sh  build-test.sh  build.sh  cuda_note.md  deviceQuery-install.sh  diary.md  ncu-install.sh  nsys-install.sh  prepare.sh  readme.md
add/: CMakeLists.txt  add.cu  add1.cu  add2.cu  add3.cu  add4.cu  call.cu  call.h  kernel.cu  kernel.h
dot/: CMakeLists.txt  call.cu  call.h  dot.cu  kernel.cu  kernel.h
include/: call.cu  call.h  check.cu  check.h  kernel.cu  kernel.h
main/: add.cu  dot.cu  sgemm.cu  transpose.cu
note/: best_practices_guide_note.md  diary.md
report/ncu/: add.ncu-rep  dot.ncu-rep  sgemm.ncu-rep  transpose.ncu-rep
report/ncu/A100/: add.ncu-rep  dot.ncu-rep  sgemm.ncu-rep  transpose.ncu-rep
report/ncu/T4/: add.ncu-rep  dot.ncu-rep  sgemm.ncu-rep  transpose.ncu-rep
report/nsys/: add.nsys-rep  dot.nsys-rep
sgemm/: CMakeLists.txt  call.cu  call.h  kernel.cu  kernel.h  sgemm.cu
transpose/: CMakeLists.txt  call.cu  call.h  kernel.cu  kernel.h  transpose.cu
util/: util.cu  util.h
